2000-12-02  Harlan Stenn  <stenn@whimsy.udel.edu>

	* ntpd/ntp_request.c (do_conf): call peer_config with
	any_interface, not 0.
	* ntpd/ntp_proto.c (transmit): Manycast cleanup
	* ntpd/ntp_peer.c (findmanycastpeer): manycast cleanup
	* ntpd/ntp_io.c (sendpkt): Only check ttl if we have a ttl
	(findinterface): Cleanup
	* ntpd/ntp_control.c: cleanup
	* include/ntpd.h: Added resetmanycast.
	* include/ntp_control.h (CP_TTL): disp -> ttl
	* ntpq/ntpq.c: disp -> ttl
	From Dave Mills

2000-11-26  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure.in: 4.0.99k11

	* ntpd/ntp_proto.c (transmit): 
	* ntpd/ntp_peer.c: 
	* ntpd/ntp_io.c: 
	* ntpd/ntp_control.c (ctl_putpeer): 
	* ntpd/ntp_config.c (getconfig): 
	* include/ntpd.h: mcast/ucast interface cleanup.
	From: Dave Mills

	* include/ntp_request.h: Put data[] as MAXFILENAME+16.  This will
	fix the conf_peer requests again, but re-break compatibility with
	old versions of the daemon.  Sigh.

	* util/ntp-genkeys.c (cleanlinks): Don't do it if nosymlinks.

2000-11-19  Harlan Stenn  <stenn@whimsy.udel.edu>

	* ntpd/refclock_parse.c (rawdcf_init_1): make Linux happier with
	some modem control stuff.
	From: Wolfram Pienkoss <wp@bszh.de> (via Frank Kardel)

	* ntpd/refclock_pcf.c (pcf_poll): isdst fix
	From: Andreas Voegele <andreas.voegele@gmx.de>

2000-10-28  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure.in: 4.0.99k10

	* ntpd/refclock_wwvb.c (wwvb_start): Cosmetic reorder.
	* ntpd/refclock_atom.c (RANGEGATE): Cleanup.  Add ASTAGE.
	Add ppsparams to struct ppsunit.
	(atom_start): Init peer->burst to ASTAGE.
	(atom_shutdown): Multi-handle
	(atom_pps): Multi-handle
	(atom_pps): RANGEGATE cleanup
	(atom_poll): Poll count cleanup.  Error check cleanup.  Burst cleanup.
	* ntpd/ntp_refclock.c (refclock_transmit): Lose the pre-burst
	check poll_update().
	(refclock_sample): Fix the jitter calc.
	(refclock_receive): Pass the jitter to the clock_filter().

	* ntpd/ntp_proto.c (clock_update): If we lose sync, reset the poll